--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Introduction</title>
-<link rel="stylesheet" href="Edy.css">
+<link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
 <p class="aligncenter"><img src="IMG_20201105_124132.jpg" alt="Edwins' Passport Photo"> </p>
