--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
-<p class="aligncenter"><img src="IMG_20201105_124132.jpg" alt="Edwins' Passport Photo"> </p>
+<p class="aligncenter"><img src="xxx_20201105_124132.jpg" alt="Edwins' Passport Photo"> </p>
 <h1>Ainerukundo Edwins</h1>
 <h3>Profile</h3>
 <div id="prof">First and foremost, I love writing code. Ever since writing
